manifests/parameter_analysis_actor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: parameter-analysis-actor
  name: parameter-analysis-actor
  namespace: semen-sinapis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: parameter-analysis-actor
  template:
    metadata:
      annotations:
        dapr.io/app-id: parameter-analysis-actor
        dapr.io/app-port: '8000'
        dapr.io/enabled: 'true'
        dapr.io/log-as-json: 'true'
        dapr.io/sidecar-liveness-probe-delay-seconds: '10'
        dapr.io/sidecar-readiness-probe-delay-seconds: '10'
      labels:
        app: parameter-analysis-actor
    spec:
      containers:
      - args:
        - --host
        - 0.0.0.0
        - --port
        - '8000'
        - main:app
        command:
        - uvicorn
        image: parameter_analysis_actor:v0.0.1
        imagePullPolicy: IfNotPresent
        name: parameter-analysis-actor
        ports:
        - containerPort: 8000
