manifests/person-center.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: person-center
  name: person-center
  namespace: semen-sinapis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: person-center
  template:
    metadata:
      annotations:
        dapr.io/app-id: person-center
        dapr.io/app-port: '50000'
        dapr.io/app-protocol: grpc
        dapr.io/enabled: 'true'
        dapr.io/log-as-json: 'true'
        dapr.io/sidecar-liveness-probe-delay-seconds: '10'
        dapr.io/sidecar-readiness-probe-delay-seconds: '10'
        module.wasm.image/variant: compat-smart
      labels:
        app: person-center
    spec:
      containers:
      - command:
        - ./person-center
        image: 192.168.33.48/library/semen-sinapis/person-center:v0.0.1
        imagePullPolicy: Alaways
        name: person-center
        ports:
        - containerPort: 50000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: person-center
  name: person-center-svc
  namespace: semen-sinapis
spec:
  ports:
  - port: 50000
    protocol: TCP
    targetPort: 50000
  selector:
    app: person-center
  type: ClusterIP
