manifests/aggregation-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aggregation-gateway
  name: aggregation-gateway
  namespace: sinapis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aggregation-gateway
  template:
    metadata:
      annotations:
        dapr.io/app-id: aggregation-gateway
        dapr.io/app-port: '80'
        dapr.io/app-protocol: http
        dapr.io/enabled: 'true'
        dapr.io/log-as-json: 'true'
        dapr.io/sidecar-liveness-probe-delay-seconds: '10'
        dapr.io/sidecar-readiness-probe-delay-seconds: '10'
        module.wasm.image/variant: compat-smart
      labels:
        app: aggregation-gateway
    spec:
      containers:
      - command:
        - ./aggregation-gateway
        image: 192.168.33.48/library/sinapis/aggregation-gateway:v0.0.10
        imagePullPolicy: Alaways
        name: aggregation-gateway
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aggregation-gateway
  name: aggregation-gateway-svc
  namespace: sinapis
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: aggregation-gateway
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aggregation-gateway
  namespace: sinapis
spec:
  ingressClassName: apisix
  rules:
  - host: sinapis.aggregation-gateway.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aggregation-gateway
            port:
              number: 80
